--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.50.1
-pandas==2.3.2
-numpy==2.3.2
-plotly==6.3.0
-scikit-learn==1.7.1
-seaborn==0.13.2
-matplotlib==3.10.6
+streamlit
+pandas
+numpy
+scikit-learn==1.5.2
+matplotlib
+seaborn
+plotly
